SERVER-17164 Don't start elections while coming out of RECOVERING state

(cherry picked from commit 30c0fd907f5279786c0eb6958bb61039697c5c29)